Validaciones y respuestas, completo 1.

--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -10,3 +10,9 @@ Size.profileRequest.firstName=First name must have at least 3 characters or less
 NotValid.lastName=Last name not valid, please enter a valid last name (only letters).
 Size.profileRequest.lastName=Last name must have at least 3 characters or less of 10 characters.
 Size.profileRequest.extension=Extension must have 4 digits.
+
+#Computer
+Computer.fields.blank=Este campo no puede estar vacio.
+Computer.fields.size=Este debe contener al menos 3 caracteres y no mas de 30 caracteres.
+Computer.hardDrive.ram.size=Este debe contener al menos 3 caracteres y no mas de 6 caracteres.
+Computer.details.observations.size=Este debe contener al menos 3 caracteres.
