--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -1,7 +1,6 @@
 NotEmpty.username=The field username cannot be empty.
 NotEmpty.email=The field email cannot be empty.
 NotEmpty.password=The field password cannot be empty.
-NotEmpty.confirmPassword=The field confirm password cannot be empty.
 NotValid.email=Email not valid, please enter a valid email (domain@domain.com).
 NotValid.password=Password not valid, please enter a valid password (must have minimum 8 characters, at least one capital letter, one number and one special character.
 Size.signupRequest.username=Username must have at least 3 characters or less of 20 characters.
@@ -10,9 +9,40 @@ Size.profileRequest.firstName=First name must have at least 3 characters or less
 NotValid.lastName=Last name not valid, please enter a valid last name (only letters).
 Size.profileRequest.lastName=Last name must have at least 3 characters or less of 10 characters.
 Size.profileRequest.extension=Extension must have 4 digits.
+NotValid.role=La lista de roles no es válida.
 
 #Computer
-Computer.fields.blank=Este campo no puede estar vacio.
-Computer.fields.size=Este debe contener al menos 3 caracteres y no mas de 30 caracteres.
+Computer.fields.blank.hostName=El campo nombre de host no puede estar vacio.
+Computer.fields.blank.model=El campo modelo no puede estar vacio.
+Computer.fields.size.hostName=El campo nombre de host debe contener al menos 3 caracteres y no mas de 30 caracteres.
+Computer.fields.size.serialMonitor=El campo serial monitor debe contener al menos 3 caracteres y no mas de 30 caracteres.
+Computer.fields.size.serialKeyboard=El campo serial keyboard debe contener al menos 3 caracteres y no mas de 30 caracteres.
+Computer.fields.size.serialCpu=El campo serial Cpu debe contener al menos 3 caracteres y no mas de 30 caracteres.
+Computer.fields.siz.codeMonitor=El codigo monitor debe contener al menos 3 caracteres y no mas de 30 caracteres.
+Computer.fields.size.codeKeyboard=El campo codigo keyboard debe contener al menos 3 caracteres y no mas de 30 caracteres.
+Computer.fields.size.codeCpu=El campo codigo Cpu debe contener al menos 3 caracteres y no mas de 30 caracteres.
+Computer.fields.size.model=El campo modelo debe contener al menos 3 caracteres y no mas de 30 caracteres.
+Computer.fields.size.processor=El campo procesador debe contener al menos 3 caracteres y no mas de 30 caracteres.
+Computer.fields.size.operativeSystem=El campo sistema operativo debe contener al menos 3 caracteres y no mas de 30 caracteres.
 Computer.hardDrive.ram.size=Este debe contener al menos 3 caracteres y no mas de 6 caracteres.
 Computer.details.observations.size=Este debe contener al menos 3 caracteres.
+
+#Commentary
+Commentary.fields.blank.subject=El campo asuto no puede estar vacío.
+Commentary.fields.blank.message=El campo mensaje no puede estar vacío.
+Commentary.fields.size.subject=El campo asunto debe contener al menos 3 caracteres y no mas de 30 caracteres.
+
+#Ticket
+Ticket.fields.blank.subject=El campo asuto no puede estar vacío.
+Ticket.fields.blank.description=El campo descripción no puede estar vacío.
+Ticket.fields.size.subject=El campo asunto debe contener al menos 3 caracteres y no mas de 30 caracteres.
+
+#Reserve
+Reserve.fields.blank.labName=El campo nombre de laboratorio no puede estar vacío.
+Reserve.fields.blank.description=El campo descripción no puede estar vacío.
+Reserve.fields.size.labName=El campo nombre de laboratorio debe contener al menos 3 caracteres y no mas de 30 caracteres.
+
+#Response
+Response.fields.blank.subject=El campo asuto no puede estar vacío.
+Response.fields.blank.details=El campo detalles no puede estar vacío.
+Response.fields.size.subject=El campo asunto debe contener al menos 3 caracteres y no mas de 30 caracteres.
