Cambios y arreglos varios, completo 4.

--- a/src/main/resources/messages_en_US.properties
+++ b/src/main/resources/messages_en_US.properties
@@ -1,14 +1,15 @@
-NotEmpty.username=The field username cannot be empty.
-NotEmpty.email=The field email cannot be empty.
-NotEmpty.password=The field password cannot be empty.
-NotValid.email=Email not valid, please enter a valid email (domain@domain.com).
-NotValid.password=Password not valid, please enter a valid password (must have minimum 8 characters, at least one capital letter, one number and one special character.
-Size.signupRequest.username=Username must have at least 3 characters or less of 20 characters.
-NotValid.firstName=First name not valid, please enter a valid name (only letters).
-Size.profileRequest.firstName=First name must have at least 3 characters or less of 10 characters.
-NotValid.lastName=Last name not valid, please enter a valid last name (only letters).
-Size.profileRequest.lastName=Last name must have at least 3 characters or less of 10 characters.
-Size.profileRequest.extension=Extension must have 4 digits.
+#User
+NotEmpty.username=El campo nombre de usuario no puede estar vacio.
+NotEmpty.email=El campo email no puede estar vacio.
+NotEmpty.password=El campo contraseña no puede estar vacio.
+NotValid.email=Email no válido, por favor ingresa un email con el formato (domain@domain.com).
+NotValid.password=Contraseña no válida, la contraseña debe tener al menos 8 caracteres, una mayúscula, una minúscula, un número y un caracter especial.
+Size.signupRequest.username=El nombre de usuario debe tener al menos 3 characters y menos 20 caracteres.
+NotValid.firstName=Nombre no válido, debe ingresar un nombre válido (sólo letras sin espacios en blanco).
+Size.profileRequest.firstName=El nombre debe tener al menos 3 caracteres y menos de 10 caracteres.
+NotValid.lastName=Apellido no válido, debe ingresar un apellido válido (sólo letras sin espacios en blanco).
+Size.profileRequest.lastName=El apellido debe tener al menos 3 caracteres y menos de 10 caracteres.
+Size.profileRequest.extension=La extensión debe tener 4 dígitos.
 NotValid.role=La lista de roles no es válida.
 
 #Computer
